cleanup and generified BinaryNode

--- a/binaryTreeTest/binaryTreeTest.csproj
+++ b/binaryTreeTest/binaryTreeTest.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinaryNode.cs" />
+    <Compile Include="BitArray.cs" />
     <Compile Include="FileManager.cs" />
     <Compile Include="MorseCodeTranslater.cs" />
+    <Compile Include="NullableChar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
